--- a/package.yaml
+++ b/package.yaml
@@ -14,6 +14,7 @@ dependencies:
 - yesod-form >=1.6 && <1.7
 - yesod-auth-oauth2 # >=0.5 && <0.7
 - hoauth2 # >=1.3.0 && <1.9
+- bcrypt
 - uri-bytestring-aeson
 - classy-prelude # >=1.4 && <1.5
 - classy-prelude-conduit # >=1.4 && <1.5
