--- a/package.yaml
+++ b/package.yaml
@@ -6,7 +6,6 @@ dependencies:
 # Due to a bug in GHC 8.0.1, we block its usage
 # See: https://ghc.haskell.org/trac/ghc/ticket/12130
 - base >=4.8.2.0 && <4.9 || >=4.9.1.0 && <5
-
 - yesod >=1.6 && <1.7
 - yesod-core >=1.6 && <1.7
 - yesod-auth >=1.6 && <1.7
@@ -15,6 +14,7 @@ dependencies:
 - yesod-auth-oauth2 # >=0.5 && <0.7
 - hoauth2 # >=1.3.0 && <1.9
 - bcrypt
+- raw-strings-qq
 - uri-bytestring-aeson
 - classy-prelude # >=1.4 && <1.5
 - classy-prelude-conduit # >=1.4 && <1.5
