--- a/package.yaml
+++ b/package.yaml
@@ -14,7 +14,7 @@ dependencies:
 - yesod-auth-oauth2 # >=0.5 && <0.7
 - morpheus-graphql    >= 0.7.1
 - hoauth2 # >=1.3.0 && <1.9
-- bcrypt
+- cryptonite >= 0.25
 - raw-strings-qq
 - uri-bytestring-aeson
 - classy-prelude # >=1.4 && <1.5
