--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
 name:    inventory-server
 version: "0.0.0"
-
+build-type: "Custom"
 dependencies:
 
 # Due to a bug in GHC 8.0.1, we block its usage
