flyway baseline true

--- a/inventory-db/conf/flyway.conf
+++ b/inventory-db/conf/flyway.conf
@@ -41,7 +41,7 @@ PostgreSQL        : jdbc:postgresql://<host>:<port>/<database>?<key1>=<value1>&<
 # Sybase ASE        : jdbc:jtds:sybase://<host>:<port>/<database>
 # Redshift*         : jdbc:redshift://<host>:<port>/<database>
 
-flyway.url=jdbc:postgresql://192.168.99.100:5432/inventory_db
+flyway.url=jdbc:postgresql://192.168.0.100:5432/inventory_db
 
 # Fully qualified classname of the JDBC driver (autodetected by default based on flyway.url)
 # flyway.driver=
@@ -53,7 +53,7 @@ flyway.user=inventory_user
 # Password to use to connect to the database. Flyway will prompt you to enter it if not specified, and if the JDBC
 # connection is not using a password-less method of authentication.
 flyway.password=inventory_password
-
+# flyway.baselineOnMigrate=true
 # The maximum number of retries when attempting to connect to the database. After each failed attempt,
 # Flyway will wait 1 second before attempting to connect again, up to the maximum number of times specified
 # by connectRetries. (default: 0)
