--- a/package.yaml
+++ b/package.yaml
@@ -10,7 +10,7 @@ dependencies:
 - yesod-core >=1.6 && <1.7
 - yesod-auth >=1.6 && <1.7
 - yesod-static >=1.6 && <1.7
-- yesod-form >=1.6 && <1.7
+#- yesod-form >=1.6 && <1.7
 - yesod-auth-oauth2 # >=0.5 && <0.7
 - morpheus-graphql    >= 0.7.1
 - hoauth2 # >=1.3.0 && <1.9
@@ -27,6 +27,7 @@ dependencies:
 - mtl
 - text >=0.11 && <2.0
 - persistent # >=2.8 && <2.9
+- esqueleto
 - persistent-postgresql # >=2.8 && <2.9
 - persistent-template >=2.5 && <2.9
 - template-haskell
