default db host

--- a/inventory-db/conf/flyway.conf
+++ b/inventory-db/conf/flyway.conf
@@ -33,7 +33,7 @@
 # MySQL             : jdbc:mysql://<host>:<port>/<database>?<key1>=<value1>&<key2>=<value2>...
 # Oracle            : jdbc:oracle:thin:@//<host>:<port>/<service>
 # Oracle (TNS)**    : jdbc:oracle:thin:@<tns_entry>
-PostgreSQL        : jdbc:postgresql://<host>:<port>/<database>?<key1>=<value1>&<key2>=<value2>...
+# PostgreSQL        : jdbc:postgresql://<host>:<port>/<database>?<key1>=<value1>&<key2>=<value2>...
 # SAP HANA*         : jdbc:sap://<host>:<port>/?databaseName=<database>
 # Snowflake*        : jdbc:snowflake://<account>.snowflakecomputing.com/?db=<database>&warehouse=<warehouse>&role=<role>...
 # SQL Server        : jdbc:sqlserver://<host>:<port>;databaseName=<database>
@@ -41,7 +41,7 @@ PostgreSQL        : jdbc:postgresql://<host>:<port>/<database>?<key1>=<value1>&<
 # Sybase ASE        : jdbc:jtds:sybase://<host>:<port>/<database>
 # Redshift*         : jdbc:redshift://<host>:<port>/<database>
 
-flyway.url=jdbc:postgresql://192.168.99.100:5432/inventory_db
+flyway.url=jdbc:postgresql://192.168.0.107:5432/inventory_db
 
 # Fully qualified classname of the JDBC driver (autodetected by default based on flyway.url)
 # flyway.driver=
