--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-15.3
+resolver: lts-16.1
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -35,7 +35,7 @@ packages:
 # forks / in-progress versions pinned to a git hash. For example:
 #
 extra-deps:
- - morpheus-graphql-0.10.0
+# - morpheus-graphql-0.10.0
  - yesod-auth-oauth2-0.6.1.2
  - hoauth2-1.8.9
 
